fix: use Path.of instead of Paths.get to read json file, update file names (#25)